Make QCoreApplication::startingUp() return false when appropriate.

Currently, QCoreApplication::startingUp() returns true even after
a QCoreApplication has been constructed. This patch makes it return
false after it has been constructed and adds checks to QApplication
and QGuiApplication to ensure that it returns true within the
constructor of these classes.

Task-number: QTBUG-2591
Change-Id: Ie511522d35b5658c20be43dd112eae18c205277f
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Samuel Rødal <samuel.rodal@digia.com>

cregit: fd7b52d268ab3f9cdcdb06a77b715644d2d22ef3 https://github.com/qt/qtbase/commit/fd7b52d268ab3f9cdcdb06a77b715644d2d22ef3