src/gui/kernel/qguiapplication.cpp
@@ -3204,6 +3204,13 @@ operator|::
 name|init
 parameter_list|()
 block|{
+name|QCoreApplicationPrivate
+operator|::
+name|is_app_running
+operator|=
+literal|false
+expr_stmt|;
+comment|// Starting up.
 name|bool
 name|doGrabUnderDebugger
 init|=
